# nursing-prediction-ai

./: .gitignore  README.md
models/saiva-3-day-hosp-v6/: Makefile  Pipfile  Readme.md  automated_training_local.sh  pyproject.toml  training_params.json
models/saiva-3-day-hosp-v6/src/: run_backfill.py  run_load_data.py  run_model.py
models/saiva-3-day-hosp-v6/src/saiva/: decorators.py
models/saiva-3-day-hosp-v6/src/saiva/model/: base_model.py  ranking.py  run_explanation.py
models/saiva-3-day-hosp-v6/src/saiva/notebooks/: 00-setup.ipynb  01-get-raw-data.ipynb  02-combine-client-data.ipynb  02a-upload-data-for-datacards-1-2.ipynb  03-feature-generation.ipynb  03a-export-import-data.ipynb  04-merge-data.ipynb  05-feature-selection.ipynb  06-generate-traintest-sets.ipynb  06a-data-distribution.ipynb  06a-datacard.ipynb  07-train-model.ipynb  07a-upload-data-for-datacards-3-7.ipynb  08-model-config.ipynb  migrate_client_files.ipynb
models/saiva-3-day-hosp-v6/src/saiva/tests/: test_explanations.py
models/saiva-3-day-hosp-v6/src/saiva/training/: __init__.py  callbacks.py  (+4 more)
models/saiva-3-day-hosp-v6/src/training_pipeline/: Dockerfile  Dockerfile.local  Pipfile
models/v6-after-refactor/: .gitignore  pyproject.toml
models/v6-after-refactor/src/: ___train_model.py  patient_admissions.txt  patient_adt.txt  patient_alerts.txt  patient_assessments.txt  patient_census.txt  patient_diagnosis.txt  patient_immunizations.txt  patient_lab_results.txt  patient_meds.txt  patient_orders.txt  patient_progress_notes.txt  patient_rehosps.txt  patient_risks.txt  patient_vitals.txt
(+516 files in other folders)
