[tool.poetry]
name = "v6-after-refactor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "v6_after_refactor"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
click = "==7.1.1"
psycopg2-binary = "==2.9.5"
pandas = "^1.3.0"
pyarrow = "==11.0.0"
boto3 = "==1.26.78"
fire = "==0.5.0"
s3fs = "==0.4.0"
mlflow = "==1.26.1"
eliot = "==1.11.0"
eliot-tree = "==18.1.1"
SQLAlchemy = "==1.3.11"
sentry-sdk = "==1.5.12"
pyodbc = "^4.0.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
